--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -3,9 +3,7 @@
 .header {
     position: fixed;
     z-index: 1;
-    width: 100vw;
-    left: 50%;
-    margin-left: -50vw;
+    width: 100%;
     background-color: var(--light-gray);
     top: 0;
     
